Dev: couple of fixes
